# tail-evt

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
figures/: tail_synthetic.json
notes/: 2026-04-26-pwm-sign.md
scripts/: render_demo.py
src/: main.rs  synthetic.rs
tests/: smoke.rs
