[package]
name = "tail-evt"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Vieira Gatto"]
license = "MIT"
description = "Extreme-value tail analysis on joint asset exceedances"
repository = "https://github.com/DaruFinance/tail-evt"
readme = "README.md"

[[bin]]
name = "evt-cli"
path = "src/main.rs"

[dependencies]
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
rand_distr = "0.4"
